src/test/deca/context/invalid/created/decl_var/decl_int_eq_float.deca
// Description :
//    test affectation int = float
//
// Resultats :
//		Erreur contextuelle
//		Ligne 9 : (3.28) Type int et float incompatible

{
int a = 0.5; 
}